# Watchdog

./: CMakeLists.txt  README.md  main.cpp  watchdog.cpp  watchdog.h
include/: component.h  deathManager.h  lifeMonitor.h  watchdog.h
src/: component.cpp  deathManager.cpp  deathManager.cpp.ypZFyz  lifeMonitor.cpp  main.cpp  watchdog.cpp
test/: CMakeLists.txt  ExampleTests.cpp
test/utest/: main.cpp  test.cpp
